{
  "version": 4,
  "terraform_version": "1.5.2",
  "serial": 252,
  "lineage": "3fe00588-e1a2-99b5-a21b-865202a9fc6b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway",
      "name": "Trngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "amazon_side_asn": 64512,
            "arn": "arn:aws:ec2:us-east-1:864224372104:transit-gateway/tgw-08f8cc12dd4694c17",
            "association_default_route_table_id": "tgw-rtb-00f4bee1f2151d061",
            "auto_accept_shared_attachments": "disable",
            "default_route_table_association": "enable",
            "default_route_table_propagation": "enable",
            "description": "Transit GW",
            "dns_support": "enable",
            "id": "tgw-08f8cc12dd4694c17",
            "multicast_support": "disable",
            "owner_id": "864224372104",
            "propagation_default_route_table_id": "tgw-rtb-00f4bee1f2151d061",
            "tags": {
              "Name": "TransitGW-Dev-Test-TGW"
            },
            "tags_all": {
              "Name": "TransitGW-Dev-Test-TGW"
            },
            "vpn_ecmp_support": "enable"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "TrngwAttach1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "appliance_mode_support": "disable",
            "dns_support": "enable",
            "id": "tgw-attach-055d6b8c02a2d9cf5",
            "ipv6_support": "disable",
            "subnet_ids": [
              "subnet-0295107528f9a865d"
            ],
            "tags": {
              "Name": "TransitGW-Dev-Test-Attachment1a"
            },
            "tags_all": {
              "Name": "TransitGW-Dev-Test-Attachment1a"
            },
            "transit_gateway_default_route_table_association": true,
            "transit_gateway_default_route_table_propagation": true,
            "transit_gateway_id": "tgw-08f8cc12dd4694c17",
            "vpc_id": "vpc-0f1ab82b11ab67481",
            "vpc_owner_id": "864224372104"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.Trngw",
            "aws_subnet.trngwvpc1asubnet",
            "aws_vpc.trngwvpc1a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "TrngwAttach1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "appliance_mode_support": "disable",
            "dns_support": "enable",
            "id": "tgw-attach-0b4250cb27a8e3b35",
            "ipv6_support": "disable",
            "subnet_ids": [
              "subnet-084d11b44a1de264b"
            ],
            "tags": {
              "Name": "TransitGW-Dev-Test-Attachment1b"
            },
            "tags_all": {
              "Name": "TransitGW-Dev-Test-Attachment1b"
            },
            "transit_gateway_default_route_table_association": true,
            "transit_gateway_default_route_table_propagation": true,
            "transit_gateway_id": "tgw-08f8cc12dd4694c17",
            "vpc_id": "vpc-00648b26f3a6ae74e",
            "vpc_owner_id": "864224372104"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.Trngw",
            "aws_subnet.trngwvpc1bsubnet",
            "aws_vpc.trngwvpc1b"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "App1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f9ce67dcf718d332",
            "arn": "arn:aws:ec2:us-east-1:864224372104:instance/i-08c97a4ee258158f3",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08c97a4ee258158f3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "arvshu6_aws_jan2023accountkey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b61d491bdc5c88a3",
            "private_dns": "ip-10-125-1-109.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.125.1.109",
            "public_dns": "ec2-184-73-59-2.compute-1.amazonaws.com",
            "public_ip": "184.73.59.2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-02b64acb810fdbad4",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-075db65692ae3843e"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0295107528f9a865d",
            "tags": {
              "Name": "TransitGW-Dev-Test-App1EC2-1A"
            },
            "tags_all": {
              "Name": "TransitGW-Dev-Test-App1EC2-1A"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-075db65692ae3843e"
            ]
          },
          "dependencies": [
            "aws_security_group.trngw_sg1a",
            "aws_subnet.trngwvpc1asubnet",
            "aws_vpc.trngwvpc1a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "App2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f9ce67dcf718d332",
            "arn": "arn:aws:ec2:us-east-1:864224372104:instance/i-0525c806ff1212b19",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0525c806ff1212b19",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "arvshu6_aws_jan2023accountkey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-011c8ee9e351b956f",
            "private_dns": "ip-10-126-1-179.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.126.1.179",
            "public_dns": "ec2-100-26-147-206.compute-1.amazonaws.com",
            "public_ip": "100.26.147.206",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-053ea5a5f681e08ad",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-05492d381ca167a6c"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-084d11b44a1de264b",
            "tags": {
              "Name": "TransitGW-Dev-Test-App2EC2-1B"
            },
            "tags_all": {
              "Name": "TransitGW-Dev-Test-App2EC2-1B"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05492d381ca167a6c"
            ]
          },
          "dependencies": [
            "aws_security_group.trngw_sg1b",
            "aws_subnet.trngwvpc1bsubnet",
            "aws_vpc.trngwvpc1b"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "trngwvpc1aigw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:864224372104:internet-gateway/igw-0c0e91a6a808e01d7",
            "id": "igw-0c0e91a6a808e01d7",
            "owner_id": "864224372104",
            "tags": {
              "Name": "TransitGW-Dev-Test-IGW1A"
            },
            "tags_all": {
              "Name": "TransitGW-Dev-Test-IGW1A"
            },
            "vpc_id": "vpc-0f1ab82b11ab67481"
          },
          "dependencies": [
            "aws_vpc.trngwvpc1a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "trngwvpc1bigw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:864224372104:internet-gateway/igw-0b53bc18f665e414a",
            "id": "igw-0b53bc18f665e414a",
            "owner_id": "864224372104",
            "tags": {
              "Name": "TransitGW-Dev-Test-IGW1B"
            },
            "tags_all": {
              "Name": "TransitGW-Dev-Test-IGW1B"
            },
            "vpc_id": "vpc-00648b26f3a6ae74e"
          },
          "dependencies": [
            "aws_vpc.trngwvpc1b"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Trngw1a_RouteTable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:864224372104:route-table/rtb-0d015f4165ec0d5b5",
            "id": "rtb-0d015f4165ec0d5b5",
            "owner_id": "864224372104",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c0e91a6a808e01d7",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.126.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-08f8cc12dd4694c17",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "TransitGW-Dev-Test-RouteTable1A"
            },
            "tags_all": {
              "Name": "TransitGW-Dev-Test-RouteTable1A"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f1ab82b11ab67481"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_ec2_transit_gateway.Trngw",
            "aws_internet_gateway.trngwvpc1aigw",
            "aws_vpc.trngwvpc1a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Trngw1b_RouteTable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:864224372104:route-table/rtb-06ef04c87111ed92d",
            "id": "rtb-06ef04c87111ed92d",
            "owner_id": "864224372104",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b53bc18f665e414a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.125.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-08f8cc12dd4694c17",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "TransitGW-Dev-Test-RouteTable1B"
            },
            "tags_all": {
              "Name": "TransitGW-Dev-Test-RouteTable1B"
            },
            "timeouts": null,
            "vpc_id": "vpc-00648b26f3a6ae74e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_ec2_transit_gateway.Trngw",
            "aws_internet_gateway.trngwvpc1bigw",
            "aws_vpc.trngwvpc1b"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pubroute2igw41a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-086f312036ee84157",
            "route_table_id": "rtb-0d015f4165ec0d5b5",
            "subnet_id": "subnet-0295107528f9a865d"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.Trngw",
            "aws_internet_gateway.trngwvpc1aigw",
            "aws_route_table.Trngw1a_RouteTable",
            "aws_subnet.trngwvpc1asubnet",
            "aws_vpc.trngwvpc1a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "trngwvpc2aigw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fccd4cd14ef6bfa6",
            "route_table_id": "rtb-06ef04c87111ed92d",
            "subnet_id": "subnet-084d11b44a1de264b"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.Trngw",
            "aws_internet_gateway.trngwvpc1bigw",
            "aws_route_table.Trngw1b_RouteTable",
            "aws_subnet.trngwvpc1bsubnet",
            "aws_vpc.trngwvpc1b"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "trngw_sg1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:864224372104:security-group/sg-075db65692ae3843e",
            "description": "Allow transit GW inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-075db65692ae3843e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.126.0.0/16"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              }
            ],
            "name": "Transit_GW_SG1a",
            "name_prefix": "",
            "owner_id": "864224372104",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "TransitGW-Dev-Test_SG1a"
            },
            "tags_all": {
              "Name": "TransitGW-Dev-Test_SG1a"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f1ab82b11ab67481"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.trngwvpc1a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "trngw_sg1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:864224372104:security-group/sg-05492d381ca167a6c",
            "description": "Allow transit GW inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05492d381ca167a6c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.125.0.0/16"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              }
            ],
            "name": "Transit_GW_SG1b",
            "name_prefix": "",
            "owner_id": "864224372104",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "TransitGW-Dev-Test_SG1b"
            },
            "tags_all": {
              "Name": "TransitGW-Dev-Test_SG1b"
            },
            "timeouts": null,
            "vpc_id": "vpc-00648b26f3a6ae74e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.trngwvpc1b"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "trngwvpc1asubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:864224372104:subnet/subnet-0295107528f9a865d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.125.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0295107528f9a865d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "864224372104",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "TransitGW-Dev-Test-Subnet1a"
            },
            "tags_all": {
              "Name": "TransitGW-Dev-Test-Subnet1a"
            },
            "vpc_id": "vpc-0f1ab82b11ab67481"
          },
          "dependencies": [
            "aws_vpc.trngwvpc1a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "trngwvpc1bsubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:864224372104:subnet/subnet-084d11b44a1de264b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.126.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-084d11b44a1de264b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "864224372104",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "TransitGW-Dev-Test-Subnet1b"
            },
            "tags_all": {
              "Name": "TransitGW-Dev-Test-Subnet1b"
            },
            "vpc_id": "vpc-00648b26f3a6ae74e"
          },
          "dependencies": [
            "aws_vpc.trngwvpc1b"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "trngwvpc1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:864224372104:vpc/vpc-0f1ab82b11ab67481",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.125.0.0/16",
            "default_network_acl_id": "acl-02a849b8b914f5cac",
            "default_route_table_id": "rtb-0749aea834e14073d",
            "default_security_group_id": "sg-0aaed727b924fc121",
            "dhcp_options_id": "dopt-06ce46175363d6358",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f1ab82b11ab67481",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0749aea834e14073d",
            "owner_id": "864224372104",
            "tags": {
              "Name": "TransitGW-Dev-Test-vpc1a"
            },
            "tags_all": {
              "Name": "TransitGW-Dev-Test-vpc1a"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "trngwvpc1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:864224372104:vpc/vpc-00648b26f3a6ae74e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.126.0.0/16",
            "default_network_acl_id": "acl-0b7076cb3305a412c",
            "default_route_table_id": "rtb-0b4c8586fdd4f7ecc",
            "default_security_group_id": "sg-0a3f8e93512f66e3c",
            "dhcp_options_id": "dopt-06ce46175363d6358",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00648b26f3a6ae74e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b4c8586fdd4f7ecc",
            "owner_id": "864224372104",
            "tags": {
              "Name": "TransitGW-Dev-Test-vpc1b"
            },
            "tags_all": {
              "Name": "TransitGW-Dev-Test-vpc1b"
            }
          }
        }
      ]
    }
  ]
}